--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 name: devin morgenstern's blog
 markdown: kramdown
+highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
 gems:
   - jekyll-sitemap
