--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: devin morgenstern
+title: DEVIN MORGENSTERN
 email: devinrm@protonmail.com
 description: >
   This is the technical blog of Devin Morgenstern. Here you will find tutorials,
